--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/06/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>killed in bus accident after German/Polish authorities forced their return</b><br>Source: FFM/Pro Asyl/FR/MNS/ZAG<br>
+Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Françoise Makodila Landu (w, 27)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
 
 <br>
 
