--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/10/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>2 died after boat capsized off coast of Tangiers (MA); 3 missing, 46 survivors</b><br>Source: Caminando/ElDiario/IOM/Publico<br>
+Found dead: <b>30/07/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Valdet Rezita</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died in car crash in Weisenborn (DE) while trying to escape border control on German-Czech border</b><br>Source: Radio Bayern 5/WB/ARD/ZDF/ST/OL/ARI/ZAG<br>
 
 <br>
 
