--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/09/14</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>15 drowned after boat capsized near El Agamy (EG); 5 missing, 72 rescued</b><br>Source: UNHCR<br>
+Found dead: <b>21/09/05</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>found dead off coast of Tunisia on boat that had been travelling from Libya to Italy</b><br>Source: PICUM<br>
 
 <br>
 
