--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/06/11</b><br>Number of person: <b>273</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan, W Africa, Banglad</b><br>Cause of death: <b>drowned after overcrowded boat capsized while going from Tripoli (LY) to Lampedusa (IT)</b><br>Source: Migreurop/MUGAK/UNHCR/Reu./Universo/BBC<br>
+Found dead: <b>Jan 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>West Africa</b><br>Cause of death: <b>suicide, hanged himself with a sheet in deportation facility in Schaffhausen (CH)</b><br>Source: CARF/IRR<br>
 
 <br>
 
