--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/09/14</b><br>Number of person: <b>487</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Palestine, Syria, Egypt, Sud</b><br>Cause of death: <b>drowned in the Mediterranean Sea after traffickers sank boat carrying 500 migrants</b><br>Source: IOM/Reu./GuardianUn./MPG/BBC/Telegraph/SP<br>
+Found dead: <b>07/02/03</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after getting lost at sea near Fuerteventura (ES)</b><br>Source: IRR<br>
 
 <br>
 
