--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/09/01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, decomposing bodies washed ashore in El Ejido (ES)</b><br>Source: MNS/ODP<br>
+Found dead: <b>03/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwuami Aziaku Prempe (man, 42)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>suicide, hanged himself in his house in Salzwedel (DE) out of fear of deportation</b><br>Source: ARI<br>
 
 <br>
 
