--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/08/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, bodies retrieved in Al Khums (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>05/02/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned near Tarifa (ES) when small boat capsized trying to reach Spain</b><br>Source: MNS/NW/ELM/EP/GARA/DiarioVasco<br>
 
 <br>
 
