--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/07/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead in Tajoura, east of Tripoli (LY); probably drowned trying to cross the Mediterranean Sea</b><br>Source: IOM Libya<br>
+Found dead: <b>25/12/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>died during arson attack on refugee centre in Kaltenkirchen (DE)</b><br>Source: CARF/ZAG<br>
 
 <br>
 
