--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>died during arson attack on refugee centre in Kaltenkirchen (DE)</b><br>Source: CARF/ZAG<br>
+Found dead: <b>08/12/07</b><br>Number of person: <b>86</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq, Palestine, Somalia</b><br>Cause of death: <b>51 drowned near Seferihisar (TR) after overloaded boat sank; 35 missing</b><br>Source: ICARE/BBC/GuardianUn./SP/TheGlobe/IntHeraldT.<br>
 
 <br>
 
