--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/12/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards near Diriyah (SY) while trying to cross Syrian-Turkish border</b><br>Source: HRW/IOM<br>
+Found dead: <b>12/02/02</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Tarifa (ES) after boat shipwrecked trying to reach Spain</b><br>Source: EP<br>
 
 <br>
 
