--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fares Chebchoub (man, 24)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>found hanged in reception centre in Cagliari (IT), circumstances of death are unclear</b><br>Source: ElW<br>
+Found dead: <b>Oct 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body discovered by fisherman in western Peloponnese (GR)</b><br>Source: IRR<br>
 
 <br>
 
