--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/01/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Papie Mukuna</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>suicide, at asylum centre in Den Helder (NL) out of fear of deportation</b><br>Source: PRIME<br>
+Found dead: <b>01/12/95</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after boat capsized near Santa Cesarea Terme (IT)</b><br>Source: VK/IRR/ILM/CDS/FECL/TL<br>
 
 <br>
 
