--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/08/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (3 children; 5 women; 1 man)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>1 drowned afer boat sank on way from Anjouan (KM) to Mayotte (FR); 8 missing</b><br>Source: HabComores<br>
+Found dead: <b>10/08/09</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>killed during escape attempt from Benghazi detention centre (LY) after guards opened fire</b><br>Source: FE/VOA<br>
 
 <br>
 
