--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/08/09</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>killed during escape attempt from Benghazi detention centre (LY) after guards opened fire</b><br>Source: FE/VOA<br>
+Found dead: <b>02/03/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nouhou Doumbia (man, 36)</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>died in a fire at migrant camp in San Severo (IT); 100 huts destroyed</b><br>Source: Express/Local/Reu./ANSA<br>
 
 <br>
 
