--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/05/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±27)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned trying to swim to the Spanish enclave of Ceuta (ES) from Morocco</b><br>Source: ABC<br>
+Found dead: <b>20/04/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>died in a fire caused by arson attack on refugee centre in Gieboldehausen (DE)</b><br>Source: Konkret/ZAG<br>
 
 <br>
 
