--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/02/02</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after vessel capsized, bodies found by beach in Cádiz (ES)</b><br>Source: MNS/MUGAK<br>
+Found dead: <b>21/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaway, body found on Palmones beach in Los Barrios, Cádiz (ES)</b><br>Source: LOP/MUGAK/APDHA/ST<br>
 
 <br>
 
