--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/08/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Soran Ali Korshid (man, 35)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>suicide, overdosed on sleeping pills in asylum hostel in Rostock (DE)</b><br>Source: IRR<br>
+Found dead: <b>17/12/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, found dead near Tarifa (ES)</b><br>Source: ELM<br>
 
 <br>
 
