--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, found dead near Tarifa (ES)</b><br>Source: ELM<br>
+Found dead: <b>12/01/04</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned near Durres (AL) after shipwreck of boat carrying migrants to Italy</b><br>Source: MP<br>
 
 <br>
 
