--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, crushed under truck after reaching Great Britain from Dunkirk (FR)</b><br>Source: Passeurs d'hospitalités<br>
+Found dead: <b>13/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sadik Genc</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>disappeared, presumed dead after deportation from Bremen (DE) to Turkey</b><br>Source: ARI<br>
 
 <br>
 
