--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sadik Genc</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>disappeared, presumed dead after deportation from Bremen (DE) to Turkey</b><br>Source: ARI<br>
+Found dead: <b>15/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Cheibani Wague (man, 33)</b><br>Region of origin: <b>Mauritania</b><br>Cause of death: <b>suffocated following police mistreatment and abuse in Stadtpark, Vienna (AT)</b><br>Source: IRR/Malmoe/COE<br>
 
 <br>
 
