--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/10/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hassan Mohammad (man, 30)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>jumped out of 5-storey building in the Netherlands out of fear of deportation, had assisted friend's suicide</b><br>Source: VK/ADUC/Diario de Noticias/Diario de Navarra<br>
+Found dead: <b>19/05/12</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>missing after boat of 43 migrants sank off coast of Mayotte (FR)</b><br>Source: Le Monde/AFP/Migreurop<br>
 
 <br>
 
