--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/03/09</b><br>Number of person: <b>67</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>17 migrants died after shipwreck near Sfax (TN) on way from Libya to Italy; 50 missing</b><br>Source: LS/FE/ANSA/Ach/AFP/LSW/NOB<br>
+Found dead: <b>06/12/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of dehydration on vessel carrying 53 migrants and rescued near Dar Kebdani (MA)</b><br>Source: FE<br>
 
 <br>
 
