--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/01/18</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>2 found dead on boat rescued off coast of Libya; 10 missing, 270 rescued</b><br>Source: IOM Libya/Ansamed/USNews<br>
+Found dead: <b>04/01/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Burundi</b><br>Cause of death: <b>blown up after wandering during period of thick fog into minefied on Turkish-Greek border</b><br>Source: KI<br>
 
 <br>
 
