--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/06/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (±25)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>hit by car on A16 highway near Calais (FR)</b><br>Source: VoixDuNord/IBT<br>
+Found dead: <b>19/06/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when migrant boat sank between Libya and Italy</b><br>Source: Independent<br>
 
 <br>
 
