--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/11/02</b><br>Number of person: <b>32</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after boat sank between Western Sahara and Canary Islands (ES)</b><br>Source: VK/AFP<br>
+Found dead: <b>29/06/96</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, 18, 21)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>fell to his death in Altenberg (DE) while fleeing Czech-German border control</b><br>Source: SZ/ZAG<br>
 
 <br>
 
