--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when dinghies capsized near Kos (GR)</b><br>Source: Imkander<br>
+Found dead: <b>19/03/08</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Seneg, Nig, Som, Tun</b><br>Cause of death: <b>drowned after boat sank near coast of Zawia (LY) while travelling to Lampedusa (IT)</b><br>Source: FE/CDS<br>
 
 <br>
 
