--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/06/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned near Spain after boat crashed into a rock</b><br>Source: MNS<br>
+Found dead: <b>28/08/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 pregnant women)</b><br>Region of origin: <b>Eritrea, Ethiopia</b><br>Cause of death: <b>died of starvation during journey from Libya to Italy</b><br>Source: FE/IlMess/KI<br>
 
 <br>
 
