--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/08/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 pregnant women)</b><br>Region of origin: <b>Eritrea, Ethiopia</b><br>Cause of death: <b>died of starvation during journey from Libya to Italy</b><br>Source: FE/IlMess/KI<br>
+Found dead: <b>30/11/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found in advanced state of decomposition on beach in Tarifa (ES) by Spanish Guardia Civil</b><br>Source: ST<br>
 
 <br>
 
