--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/12/95</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>stowaways, found dead when boat reached the port of Antwerp (BE)</b><br>Source: MNS/Le Soir/CRIDA report<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (3 children; 1 woman)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned when 3 boats from Ayvacik (TR) to Lesbos (GR) sank during storm; 135 rescued</b><br>Source: Imkander<br>
 
 <br>
 
