--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (3 children; 1 woman)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned when 3 boats from Ayvacik (TR) to Lesbos (GR) sank during storm; 135 rescued</b><br>Source: Imkander<br>
+Found dead: <b>23/04/15</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (±25)</b><br>Region of origin: <b>Somalia, Afghanistan</b><br>Cause of death: <b>killed by train near Veles (MK) while walking on narrow mountain pass to Hungary</b><br>Source: VK/MNS/ZEIT<br>
 
 <br>
 
