--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/12/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed Mechergui (man, 28)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide, hanged himself with shoelaces in Berlin Köpenick detention centre (DE) after asylum claim was rejected</b><br>Source: IRR/ARI<br>
+Found dead: <b>01/01/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 28)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide in detention centre in Grünau, Berlin (DE) after asylum claim was rejected</b><br>Source: MNS/IN/jW/IRR<br>
 
 <br>
 
