--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>S.G. (man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>killed in a clash between migrant groups in Belgrade (RS)</b><br>Source: Tanjug<br>
+Found dead: <b>21/10/03</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank off coast of Tunisia on way to Italy</b><br>Source: NOB/TL/IPL<br>
 
 <br>
 
